// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse function > extracts steps correctly 1`] = `
[
  Section {
    "content": [
      {
        "items": [
          {
            "type": "text",
            "value": "Crack the ",
          },
          {
            "itemQuantity": {
              "type": "fixed",
              "value": {
                "type": "decimal",
                "value": 3,
              },
            },
            "itemUnit": undefined,
            "type": "ingredient",
            "value": 0,
          },
          {
            "type": "text",
            "value": " into a ",
          },
          {
            "type": "cookware",
            "value": 0,
          },
          {
            "type": "text",
            "value": ". Mix with some ",
          },
          {
            "itemQuantity": undefined,
            "itemUnit": undefined,
            "type": "ingredient",
            "value": 1,
          },
          {
            "type": "text",
            "value": " and add ",
          },
          {
            "itemQuantity": undefined,
            "itemUnit": undefined,
            "type": "ingredient",
            "value": 2,
          },
          {
            "type": "text",
            "value": ".",
          },
        ],
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Melt the ",
          },
          {
            "itemQuantity": {
              "type": "fixed",
              "value": {
                "type": "decimal",
                "value": 50,
              },
            },
            "itemUnit": "g",
            "type": "ingredient",
            "value": 3,
          },
          {
            "type": "text",
            "value": " in a ",
          },
          {
            "type": "cookware",
            "value": 1,
          },
          {
            "type": "text",
            "value": " on medium heat.",
          },
        ],
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Cook for ",
          },
          {
            "type": "timer",
            "value": 0,
          },
          {
            "type": "text",
            "value": ".",
          },
        ],
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Serve hot.",
          },
        ],
      },
    ],
    "name": "",
  },
]
`;

exports[`parse function > parses complex recipes correctly 1`] = `
Recipe {
  "cookware": [
    {
      "hidden": false,
      "name": "Dutch oven",
      "optional": false,
      "quantity": undefined,
    },
    {
      "hidden": false,
      "name": "small bowl",
      "optional": false,
      "quantity": undefined,
    },
    {
      "hidden": false,
      "name": "13×9-inch baking dish",
      "optional": false,
      "quantity": undefined,
    },
    {
      "hidden": false,
      "name": "rubber spatula",
      "optional": false,
      "quantity": undefined,
    },
    {
      "hidden": false,
      "name": "icing spatula",
      "optional": true,
      "quantity": undefined,
    },
  ],
  "ingredients": [
    {
      "hidden": false,
      "isRecipe": false,
      "name": "lasagne noodles",
      "optional": false,
      "preparation": undefined,
      "quantity": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 9,
        },
      },
      "unit": undefined,
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "bulk Italian sausage",
      "optional": false,
      "preparation": undefined,
      "quantity": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 1.2,
        },
      },
      "unit": "lb",
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "ground beef",
      "optional": false,
      "preparation": undefined,
      "quantity": {
        "type": "fixed",
        "value": {
          "den": 4,
          "num": 3,
          "type": "fraction",
        },
      },
      "unit": "lb",
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "onion",
      "optional": false,
      "preparation": "medium, diced",
      "quantity": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 1,
        },
      },
      "unit": undefined,
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "garlic",
      "optional": false,
      "preparation": undefined,
      "quantity": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 3,
        },
      },
      "unit": "cloves",
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "crushed tomatoes",
      "optional": false,
      "preparation": undefined,
      "quantity": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 2,
        },
      },
      "unit": "cans",
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "tomato paste",
      "optional": false,
      "preparation": undefined,
      "quantity": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 2,
        },
      },
      "unit": "cans",
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "water",
      "optional": false,
      "preparation": undefined,
      "quantity": {
        "type": "fixed",
        "value": {
          "den": 3,
          "num": 2,
          "type": "fraction",
        },
      },
      "unit": "cup",
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "sugar",
      "optional": false,
      "preparation": undefined,
      "quantity": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 2,
        },
      },
      "unit": "tbsp",
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "fresh parsley",
      "optional": false,
      "preparation": "minced, divided",
      "quantity": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 0.09,
        },
      },
      "unit": "l",
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "dried basil",
      "optional": false,
      "preparation": undefined,
      "quantity": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 2,
        },
      },
      "unit": "tsp",
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "fennel seed",
      "optional": false,
      "preparation": undefined,
      "quantity": {
        "type": "fixed",
        "value": {
          "den": 4,
          "num": 3,
          "type": "fraction",
        },
      },
      "unit": "tsp",
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "salt",
      "optional": false,
      "preparation": undefined,
      "quantity": {
        "type": "fixed",
        "value": {
          "den": 4,
          "num": 3,
          "type": "fraction",
        },
      },
      "unit": "tsp",
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "pepper",
      "optional": false,
      "preparation": "coarsely ground",
      "quantity": {
        "type": "fixed",
        "value": {
          "den": 4,
          "num": 1,
          "type": "fraction",
        },
      },
      "unit": "tsp",
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "egg",
      "optional": false,
      "preparation": "large, lightly beaten",
      "quantity": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 1,
        },
      },
      "unit": undefined,
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "ricotta cheese",
      "optional": false,
      "preparation": undefined,
      "quantity": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 1,
        },
      },
      "unit": "carton",
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "mozzarella",
      "optional": false,
      "preparation": "shredded",
      "quantity": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 4,
        },
      },
      "unit": "cups",
    },
    {
      "hidden": false,
      "isRecipe": false,
      "name": "Parmesan",
      "optional": false,
      "preparation": "grated",
      "quantity": {
        "type": "fixed",
        "value": {
          "den": 4,
          "num": 3,
          "type": "fraction",
        },
      },
      "unit": "cup",
    },
  ],
  "metadata": {
    "author": "Pam Thompson",
    "cook time": "50m",
    "prep time": "1h",
    "servings": "12, 12 slices",
    "source": "https://www.tasteofhome.com/recipes/best-lasagna/",
    "tags": [
      "pasta",
      "casserole",
      "classic",
    ],
    "time": "1h50m",
    "title": "Best Lasagna",
  },
  "sections": [
    Section {
      "content": [
        {
          "items": [
            {
              "type": "text",
              "value": "Bring a large pot of salted water to a boil. Cook the ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "type": "decimal",
                  "value": 9,
                },
              },
              "itemUnit": undefined,
              "type": "ingredient",
              "value": 0,
            },
            {
              "type": "text",
              "value": " according to the package directions. When complete, drain the noodles, and set aside.",
            },
          ],
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Meanwhile, heat a ",
            },
            {
              "type": "cookware",
              "value": 0,
            },
            {
              "type": "text",
              "value": " over medium heat. Add the ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "type": "decimal",
                  "value": 1.2,
                },
              },
              "itemUnit": "lb",
              "type": "ingredient",
              "value": 1,
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "den": 4,
                  "num": 3,
                  "type": "fraction",
                },
              },
              "itemUnit": "lb",
              "type": "ingredient",
              "value": 2,
            },
            {
              "type": "text",
              "value": " and diced ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "type": "decimal",
                  "value": 1,
                },
              },
              "itemUnit": undefined,
              "type": "ingredient",
              "value": 3,
            },
            {
              "type": "text",
              "value": ". Cook for ",
            },
            {
              "type": "timer",
              "value": 0,
            },
            {
              "type": "text",
              "value": " or until the meat is no longer pink, breaking up the meat with a large spoon as it cooks to create gorgeous crumbles. Add the ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "type": "decimal",
                  "value": 3,
                },
              },
              "itemUnit": "cloves",
              "type": "ingredient",
              "value": 4,
            },
            {
              "type": "text",
              "value": ", and cook for ",
            },
            {
              "type": "timer",
              "value": 1,
            },
            {
              "type": "text",
              "value": ", until the mixture is fragrant.",
            },
          ],
        },
        {
          "note": "Editor’s Tip: To ensure the noodles will not stick to each other, stir the water like a whirlpool when you add the pasta sheets.",
        },
      ],
      "name": "Brown the beef",
    },
    Section {
      "content": [
        {
          "items": [
            {
              "type": "text",
              "value": "Drain the mixture in the Dutch oven. Then, add the remaining sauce ingredients: ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "type": "decimal",
                  "value": 2,
                },
              },
              "itemUnit": "cans",
              "type": "ingredient",
              "value": 5,
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "type": "decimal",
                  "value": 2,
                },
              },
              "itemUnit": "cans",
              "type": "ingredient",
              "value": 6,
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "den": 3,
                  "num": 2,
                  "type": "fraction",
                },
              },
              "itemUnit": "cup",
              "type": "ingredient",
              "value": 7,
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "type": "decimal",
                  "value": 2,
                },
              },
              "itemUnit": "tbsp",
              "type": "ingredient",
              "value": 8,
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "type": "decimal",
                  "value": 3,
                },
              },
              "itemUnit": "tbsp",
              "type": "ingredient",
              "value": 9,
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "type": "decimal",
                  "value": 2,
                },
              },
              "itemUnit": "tsp",
              "type": "ingredient",
              "value": 10,
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "den": 4,
                  "num": 3,
                  "type": "fraction",
                },
              },
              "itemUnit": "tsp",
              "type": "ingredient",
              "value": 11,
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "den": 2,
                  "num": 1,
                  "type": "fraction",
                },
              },
              "itemUnit": "tsp",
              "type": "ingredient",
              "value": 12,
            },
            {
              "type": "text",
              "value": " and ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "den": 4,
                  "num": 1,
                  "type": "fraction",
                },
              },
              "itemUnit": "tsp",
              "type": "ingredient",
              "value": 13,
            },
            {
              "type": "text",
              "value": ". ",
            },
          ],
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Bring the mixture to a boil. Reduce the heat to a simmer. Cook, uncovered, for ",
            },
            {
              "type": "timer",
              "value": 2,
            },
            {
              "type": "text",
              "value": ", stirring occasionally.",
            },
          ],
        },
      ],
      "name": "Make the meat sauce",
    },
    Section {
      "content": [
        {
          "items": [
            {
              "type": "text",
              "value": "In a ",
            },
            {
              "type": "cookware",
              "value": 1,
            },
            {
              "type": "text",
              "value": ", whisk together the ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "type": "decimal",
                  "value": 1,
                },
              },
              "itemUnit": undefined,
              "type": "ingredient",
              "value": 14,
            },
            {
              "type": "text",
              "value": ", ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "type": "decimal",
                  "value": 1,
                },
              },
              "itemUnit": "carton",
              "type": "ingredient",
              "value": 15,
            },
            {
              "type": "text",
              "value": ", and remaining ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "den": 4,
                  "num": 1,
                  "type": "fraction",
                },
              },
              "itemUnit": "cup",
              "type": "ingredient",
              "value": 9,
            },
            {
              "type": "text",
              "value": " and ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "den": 4,
                  "num": 1,
                  "type": "fraction",
                },
              },
              "itemUnit": "tsp",
              "type": "ingredient",
              "value": 12,
            },
            {
              "type": "text",
              "value": ". ",
            },
          ],
        },
        {
          "items": [
            {
              "type": "text",
              "value": "If you haven’t already, grate the ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "type": "decimal",
                  "value": 4,
                },
              },
              "itemUnit": "cups",
              "type": "ingredient",
              "value": 16,
            },
            {
              "type": "text",
              "value": " and ",
            },
            {
              "itemQuantity": {
                "type": "fixed",
                "value": {
                  "den": 4,
                  "num": 3,
                  "type": "fraction",
                },
              },
              "itemUnit": "cup",
              "type": "ingredient",
              "value": 17,
            },
            {
              "type": "text",
              "value": " cheeses.",
            },
          ],
        },
        {
          "note": "Editor’s Tip: For the freshest, creamiest taste, grate your own cheese at home.",
        },
      ],
      "name": "Prepare the cheese filling",
    },
    Section {
      "content": [
        {
          "items": [
            {
              "type": "text",
              "value": "Preheat the oven to 375°. ",
            },
          ],
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Spoon 2 cups meat sauce into an ungreased ",
            },
            {
              "type": "cookware",
              "value": 2,
            },
            {
              "type": "text",
              "value": ", spreading it out to cover the entire dish. Layer three noodles onto the sauce. Add one-third of the ricotta mixture, spreading it over the noodles with a ",
            },
            {
              "type": "cookware",
              "value": 3,
            },
            {
              "type": "text",
              "value": " or an ",
            },
            {
              "type": "cookware",
              "value": 4,
            },
            {
              "type": "text",
              "value": ". Sprinkle with 1 cup mozzarella cheese and 2 tablespoons Parmesan cheese.",
            },
          ],
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Repeat the layers twice, finishing with remaining meat sauce and cheeses. The dish will be very full by the time you get to the top!",
            },
          ],
        },
      ],
      "name": "Layer the lasagna ingredients",
    },
    Section {
      "content": [
        {
          "items": [
            {
              "type": "text",
              "value": "Cover the baking dish, and bake for ",
            },
            {
              "type": "timer",
              "value": 3,
            },
            {
              "type": "text",
              "value": ". ",
            },
          ],
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Remove the cover, and cook for an additional ",
            },
            {
              "type": "timer",
              "value": 4,
            },
            {
              "type": "text",
              "value": ", until the sauce is bubbling around the edges and the cheese is fully melted. ",
            },
          ],
        },
        {
          "items": [
            {
              "type": "text",
              "value": "Let the lasagna stand for ",
            },
            {
              "type": "timer",
              "value": 5,
            },
            {
              "type": "text",
              "value": " before slicing and serving.",
            },
          ],
        },
      ],
      "name": "Bake the lasagna",
    },
  ],
  "servings": 12,
  "timers": [
    {
      "duration": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 10,
        },
      },
      "name": undefined,
      "unit": "minutes",
    },
    {
      "duration": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 1,
        },
      },
      "name": undefined,
      "unit": "min",
    },
    {
      "duration": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 30,
        },
      },
      "name": undefined,
      "unit": "min",
    },
    {
      "duration": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 25,
        },
      },
      "name": undefined,
      "unit": "min",
    },
    {
      "duration": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 25,
        },
      },
      "name": undefined,
      "unit": "min",
    },
    {
      "duration": {
        "type": "fixed",
        "value": {
          "type": "decimal",
          "value": 15,
        },
      },
      "name": undefined,
      "unit": "min",
    },
  ],
}
`;

exports[`parse function > parses notes correctly 1`] = `
[
  Section {
    "content": [
      {
        "note": "This is a note at the beginning.",
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Add ",
          },
          {
            "itemQuantity": {
              "type": "fixed",
              "value": {
                "type": "decimal",
                "value": 100,
              },
            },
            "itemUnit": "g",
            "type": "ingredient",
            "value": 0,
          },
          {
            "type": "text",
            "value": "> and this.",
          },
        ],
      },
      {
        "note": "This is a note in the middle which continues on the next line.",
      },
      {
        "items": [
          {
            "type": "text",
            "value": "Another step.",
          },
        ],
      },
      {
        "note": "Another note on multiple lines starting with > for readability",
      },
      {
        "note": "A final note.",
      },
    ],
    "name": "",
  },
]
`;
